syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated";
option java_outer_classname = "HelloProto";
option objc_class_prefix = "HP";

package gen;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service MessageHandler {
  // Sends a greeting
  rpc HandleMessage (NodeMessage) returns (Ok) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message NodeMessage {
  int32 from = 1;
  enum TYPE {
    CONNECT = 0;
    INITIATE = 1;
    TEST = 2;
    ACCEPT = 3;
    REJECT = 4;
    REPORT = 5;
    CHANGE_CORE = 6;
  }
  TYPE type = 2;
  int32 lvl = 3;
  string nodeState = 4;
  int32 weight = 5;
}

message Ok {}